[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Colourful Game-UI kit  (31).png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Colourful Game-UI kit  (34).png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Back.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Colourful Game-UI kit  (30)-1.png.png" type="Texture" id=5]
[ext_resource path="res://Outros/04B_30__.TTF" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.137255, 0.152941, 0.133333, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=2]
size = 23
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="LifeBar" type="TextureProgress" parent="."]
margin_left = 34.0
margin_top = 89.0
margin_right = 294.0
margin_bottom = 129.0
value = 10.0
rounded = true
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_right = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossBar" type="TextureProgress" parent="."]
visible = false
margin_left = 309.472
margin_top = 88.1827
margin_right = 569.472
margin_bottom = 128.183
rect_scale = Vector2( 1.5, 1 )
value = 30.0
rounded = true
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_right = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LvlUpSign" type="Panel" parent="."]
margin_left = -150.0
margin_top = 144.0
margin_right = -23.0
margin_bottom = 184.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="LvlUpSign"]
margin_left = 7.0
margin_top = 8.0
margin_right = 126.0
margin_bottom = 40.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "Lvl Up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
